--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "echarts": "^4.9.0",
     "eva-icons": "^1.1.3",
     "firebase": "^10.12.3",
+    "html2canvas": "^1.4.1",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jspdf": "^2.5.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "~1.2.9",
