--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
     "start": "ng serve",
+    "start-dev": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng serve",
     "build": "ng build",
     "build:prod": "npm run build -- --configuration production --aot",
     "test": "ng test",
